deploy: Agrega configuraciones a htaccess y compilado de Angular

--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,5 @@
 </style><link rel="stylesheet" href="styles-FVVVY7T4.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-FVVVY7T4.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-5W2MN373.js" type="module"></script><script src="scripts-Q6PZYTIL.js" defer></script><script src="main-XKVYJVJK.js" type="module"></script></body>
+<script src="polyfills-5W2MN373.js" type="module"></script><script src="scripts-Q6PZYTIL.js" defer></script><script src="main-33RRO2FO.js" type="module"></script></body>
 </html>
