--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-critters-container>
 <head>
   <meta charset="utf-8">
-  <title>Glasmmy Digital</title>
+  <title>GlasmmyDigitalFe</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -12,5 +12,5 @@
 </style><link rel="stylesheet" href="styles-FVVVY7T4.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-FVVVY7T4.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-5W2MN373.js" type="module"></script><script src="scripts-Q6PZYTIL.js" defer></script><script src="main-XKVYJVJK.js" type="module"></script></body>
+<script src="polyfills-5W2MN373.js" type="module"></script><script src="scripts-Q6PZYTIL.js" defer></script><script src="main-33RRO2FO.js" type="module"></script></body>
 </html>
